# build_system_c_cpp

./: LICENSE  README.md
example/: main.c
example/include/: sub.h
example/scripts/: postbuild.sh
example/sub23/: sub3.c
example_makefile/: Makefile
example_makefile/include/: sub3.h
example_makefile/scripts/: postbuild.sh  prebuild.sh
example_makefile/sub23/: Makefile
example_makefile_library/example_makefile_dynamic_library/: Makefile  main.c
example_makefile_library/example_makefile_dynamic_library/include/: sub.h
example_makefile_library/example_makefile_dynamic_library/sub/: sub.c
example_makefile_library/example_makefile_static_library/: Makefile  main.c
example_makefile_library/example_makefile_static_library/include/: sub.h
example_makefile_library/example_makefile_static_library/sub/: Makefile  sub.c
example_meson/: meson.build  sub.c
example_meson/include/: sub2.h
example_meson/scripts/: postbuild.sh  prebuild.sh
example_meson/sub23/: meson.build  sub2.c
example_nix_cpp_gtest_cmake/: .gitignore  CMakeLists.txt  dev-shell.nix
example_nix_cpp_gtest_cmake/src/: CMakeLists.txt
example_nix_cpp_gtest_cmake/test/: CMakeLists.txt  main.cpp
example_nix_cpp_gtest_meson/: .gitignore  README.md  dev-shell.nix  meson.build
example_nix_cpp_gtest_meson/include/: crypto.hpp
example_nix_cpp_gtest_meson/src/: examples.cpp  meson.build
example_nix_cpp_gtest_meson/test/: meson.build  test_entry.cpp
ready_to_use_makefile/makefile_for_app/: Makefile
ready_to_use_makefile/makefile_for_kernel_driver/: Makefile
